tests/err09.json.err
Parse error at line 003

001: {
002: 	"a": 1
003: 	"b": 2
     	^
Expected ','
